changes html files

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     	<img src="src/tab_3_7_05_home_page_1.jpg" alt="" class="image">
     	<p class="plan">Рассрочка</p>
     	<p class="cost">2 699 грн.</p>
-    	<p class="buy">Купить</p>
+    	<a class="buy" href="#">Купить</a>
+    	
 
     </div>
     
 
 </body>
 </html>
+
